--- a/html/ano1.html
+++ b/html/ano1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="script/index.js"></script>
+    <script src="../script/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <title>Bio Drive</title>
@@ -91,7 +91,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a href=" ">Alfreds Futterkiste</a>
+                        <a href=" ">MICRO - 2021/2022 Exercícios (Prof. Cristina A Viegas)</a>
                     </td>
                     <td><a href=" "><i class="fa-solid fa-eye fa-lg "></i></td>
 
