--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,8 @@
 
 </head>
 
+
 <body>
-
-
     <header>
         <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
             <div class="bar1"></div>
@@ -65,40 +64,36 @@
 
     </header>
 
+
+
     <main>
-        <section class="container">
 
-            <table id="ano">
-                <tr>
-                    <th colspan=" 3 "><a href=" ">2º Ano</a> <i class="fa-solid fa-angle-right fa-xs"></i><a href=" ">   3º Ano</a></th>
 
-                </tr>
-                <tr>
-                    <td>
-                        <a href=" ">1º Semestre</a>
-                    </td>
-                    <td><a href=" "><i class="fa-solid fa-eye fa-lg "></i></td>
 
-                    <td><a href=" "><i class="fa-solid fa-download fa-lg "></i></td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href=" ">2º Semestre</a>
-                    </td>
-                    <td><a href=" "><i class="fa-solid fa-eye fa-lg "></i></td>
+        <section class="foto">
+            <img src="../images/repositorioblur.jpg" alt="Biblioteca"></img>
 
-                    <td><a href=" "><i class="fa-solid fa-download fa-lg "></i></td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href=" ">Alfreds Futterkiste</a>
-                    </td>
-                    <td><a href=" "><i class="fa-solid fa-eye fa-lg "></i></td>
+            <h1>Repositório de Engenharia Biológica</h1>
+        </section>
 
-                    <td><a href=" "><i class="fa-solid fa-download fa-lg "></i></td>
-                </tr>
-            </table>
+        <section class="page">
+            <h2>Bem Vindo ao Repositório de Engenharia Biológica!</h2>
 
+            <p>Para teres acesso aos documentos inicia sessão atráves do fénix <i class="fa-solid fa-right-to-bracket"></i> ou introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
+
+            <p>Se não fores aluno do IST e não souberes a palavra-passe manda-nos um email com o assunto "PASSWORD" a indicar o teu nome e motivo para queres aceder aos conteúdos do repositório.</p>
+
+            <p>O Repositório tem um carácter dinâmico e participativo. Caso tenhas material de estudo que não esteja no Repositório, envia-nos um email com o respectivo material anexado e devidamente identificado, ou preenche o seguinte formulário:</p>
+
+
+            <div class="btn">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdsVS6ymHln25464lklVVKB05KIVurKX9ZQbnTIMQwLoWHRLg/viewform" class="btn page-btn">Formulário</a>
+                <a href="mailto: repositorio.neb@gmail.com" class="btn page-btn">Email</a>
+            </div>
+            <p></p>
+
+            <p class="centered-text">Se tiveres alguma sugestão, não hesites em falar connosco!</p>
+            <p class="centered-text">Bom Estudo!</p>
 
         </section>
 
@@ -107,19 +102,19 @@
     <footer>
         <ul>
             <li>
-                <a href="https://www.instagram.com/neb.ist/ " class="fa-brands fa-instagram fa-lg "></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/NEBIST " class="fa-brands fa-facebook fa-lg "></a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/company/nebist---n%C3%BAcleo-de-engenharia-biol%C3%B3gica-do-instituto-superior-t%C3%A9cnico/ " class="fa-brands fa-linkedin fa-lg "></a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/channel/UCK7IhGs57sJtizBi5eECKpQ " class="fa-brands fa-youtube fa-lg "></a>
-                        </li>
-                        </ul>
-                        </footer>
+                <a href="https://www.instagram.com/neb.ist/" class="fa-brands fa-instagram fa-lg"></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/NEBIST" class="fa-brands fa-facebook fa-lg"></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/company/nebist---n%C3%BAcleo-de-engenharia-biol%C3%B3gica-do-instituto-superior-t%C3%A9cnico/" class="fa-brands fa-linkedin fa-lg"></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/channel/UCK7IhGs57sJtizBi5eECKpQ" class="fa-brands fa-youtube fa-lg"></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
