--- a/html/ano1.html
+++ b/html/ano1.html
@@ -14,9 +14,8 @@
 
 </head>
 
+
 <body>
-
-
     <header>
         <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
             <div class="bar1"></div>
@@ -39,14 +38,14 @@
             </div>
 
             <div id="brand">
-                <a href="../index.html"><img src="../images/logopequeno.png" alt="Logo NEBIST"></img>
+                <a href="../html/index.html"><img src="../images/logopequeno.png" alt="Logo NEBIST"></img>
                 </a>
-                <a href="../index.html">Bio Drive</a>
+                <a href="../html/index.html">Bio Drive</a>
             </div>
 
             <div id="enter">
-                <li id="login"><a href="/login"><i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li id="password"><a href="/password"><i class="fa fa-key" aria-hidden="true"></i></a></li>
+                <li id="login"><a href=""><i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li id="password"><a href="../indexpublic.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
             </div>
 
 
@@ -68,9 +67,10 @@
     <main>
         <section class="container">
 
-            <table id="ano1">
+            <table id="ano">
                 <tr>
-                    <th colspan=" 3 "><a href=" ">1º Ano</a> <i class="fa-solid fa-angle-right fa-xs"></i><a href=" ">   2º Ano</a></th>
+                    <th colspan=" 3 "><a href=" ">1º Ano</a> <i class="fa-solid fa-angle-right fa-xs"></i><a href=" ">
+                            2º Ano</a></th>
 
                 </tr>
                 <tr>
@@ -101,6 +101,7 @@
 
 
         </section>
+
 
     </main>
 
