--- a/indexpublic.html
+++ b/indexpublic.html
@@ -14,22 +14,10 @@
 
 </head>
 
-<body>
-    <header>
-        <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-            <ul class="mobile-menu">
-                <li><a href="html/ano1.html">1º Ano</a></li>
-                <li><a href="html/ano2.html">2º Ano</a></li>
-                <li><a href="html/ano3.html">3º Ano</a></li>
-                <li><a href="html/ano4.html">4º Ano</a></li>
-                <li><a href="html/ano5.html">5º Ano</a></li>
-                <li><a href="html/arquivo.html">Arquivo</a></li>
 
-            </ul>
-        </div>
+<body>
+    <header id="public">
+
         <div id="top">
             <div id="enter2">
                 <li id="login2"><i class="fa-solid fa-right-to-bracket"></i></li>
@@ -37,29 +25,19 @@
             </div>
 
             <div id="brand">
-                <a href="index.html"><img src="images/logopequeno.png" alt="Logo NEBIST"></img>
+                <a href="indexpublic.html"><img src="images/logopequeno.png" alt="Logo NEBIST"></img>
                 </a>
-                <a href="index.html">Bio Drive</a>
+                <a href="indexpublic.html">Bio Drive</a>
             </div>
 
             <div id="enter">
-                <li id="login"><a href="/login"><i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li id="password"><a href="/password"><i class="fa fa-key" aria-hidden="true"></i></a></li>
+                <li id="login"><a href=""><i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li id="password"><a href="html/encrypted.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
             </div>
 
 
         </div>
 
-        <nav>
-            <ul>
-                <li><a href="html/ano1.html">1º Ano</a></li>
-                <li><a href="html/ano2.html">2º Ano</a></li>
-                <li><a href="html/ano3.html">3º Ano</a></li>
-                <li><a href="html/ano4.html">4º Ano</a></li>
-                <li><a href="html/ano5.html">5º Ano</a></li>
-                <li><a href="html/arquivo.html">Arquivo</a></li>
-            </ul>
-        </nav>
 
     </header>
 
@@ -80,6 +58,8 @@
 
             <p>Para teres acesso aos documentos inicia sessão atráves do fénix <i class="fa-solid fa-right-to-bracket"></i> ou introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
 
+            <p>Se não fores aluno do IST e não souberes a palavra-passe manda-nos um email com o assunto "PASSWORD" a indicar o teu nome e motivo para queres aceder aos conteúdos do repositório.</p>
+
             <p>O Repositório tem um carácter dinâmico e participativo. Caso tenhas material de estudo que não esteja no Repositório, envia-nos um email com o respectivo material anexado e devidamente identificado, ou preenche o seguinte formulário:</p>
 
 
@@ -89,7 +69,8 @@
             </div>
             <p></p>
 
-            <p>Se tiveres alguma sugestão, não hesites em falar connosco!</p>
+            <p class="centered-text">Se tiveres alguma sugestão, não hesites em falar connosco!</p>
+            <p class="centered-text">Bom Estudo!</p>
 
         </section>
 
