--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
 
             <div id="brand">
-                <a href="indexpublic.html"><img src="images/logopequeno.png" alt="Logo NEBIST"></img>
+                <a href="index.html"><img src="images/logopequeno.png" alt="Logo NEBIST"></img>
                 </a>
-                <a href="indexpublic.html">Bio Drive</a>
+                <a href="index.html">Bio Drive</a>
             </div>
 
             <div id="enter">
