--- a/html/indexprivate.html
+++ b/html/indexprivate.html
@@ -38,14 +38,14 @@
             </div>
 
             <div id="brand">
-                <a href="../html/index.html"><img src="../images/logopequeno.png" alt="Logo NEBIST"></img>
+                <a href="../html/indexprivate.html"><img src="../images/logopequeno.png" alt="Logo NEBIST"></img>
                 </a>
-                <a href="../html/index.html">Bio Drive</a>
+                <a href="../html/indexprivate.html">Bio Drive</a>
             </div>
 
             <div id="enter">
                 <li id="login"><a href=""><i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li id="password"><a href="../indexpublic.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
+                <li id="password"><a href="../index.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
             </div>
 
 
