--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div id="enter">
                 <li id="login"><a href=""><i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li id="password"><a href="html/encrypted.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
+                <li id="password-before"><a href="html/encrypted.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
             </div>
 
 
@@ -56,7 +56,7 @@
         <section class="page">
             <h2>Bem Vindo ao Repositório de Engenharia Biológica!</h2>
 
-            <p>Para teres acesso aos documentos inicia sessão atráves do fénix <i class="fa-solid fa-right-to-bracket"></i> ou introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
+            <p class="centered-text">Para teres acesso aos documentos introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
 
             <p>Se não fores aluno do IST e não souberes a palavra-passe manda-nos um email com o assunto "PASSWORD" a indicar o teu nome e motivo para queres aceder aos conteúdos do repositório.</p>
 
