--- a/html/ano1.html
+++ b/html/ano1.html
@@ -45,7 +45,7 @@
 
             <div id="enter">
                 <li id="login"><a href=""><i class="fa-solid fa-right-to-bracket"></i></a></li>
-                <li id="password"><a href="../index.html"><i class="fa fa-key" aria-hidden="true"></i></a></li>
+                <li id="password"><a href="../index.html"><i class="fa-solid fa-right-to-bracket"></i></a></li>
             </div>
 
 
