--- a/html/indexprivate.html
+++ b/html/indexprivate.html
@@ -22,12 +22,12 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
             <ul class="mobile-menu">
-                <li><a href="../html/ano1.html">1º Ano</a></li>
-                <li><a href="../html/ano2.html">2º Ano</a></li>
-                <li><a href="../html/ano3.html">3º Ano</a></li>
-                <li><a href="../html/ano4.html">4º Ano</a></li>
-                <li><a href="../html/ano5.html">5º Ano</a></li>
-                <li><a href="../html/arquivo.html">Arquivo</a></li>
+                <li><a onclick="goToYear('1º Ano')">1º Ano</a></li>
+                <li><a onclick="goToYear('2º Ano')">2º Ano</a></li>
+                <li><a onclick="goToYear('3º Ano')">3º Ano</a></li>
+                <li><a onclick="goToYear('4º Ano')">4º Ano</a></li>
+                <li><a onclick="goToYear('5º Ano')">5º Ano</a></li>
+                <li><a href="../html/arquivo.html">Arquivo </a></li>
 
             </ul>
         </div>
@@ -53,12 +53,12 @@
 
         <nav>
             <ul>
-                <li><a href="../html/ano1.html">1º Ano</a></li>
-                <li><a href="../html/ano2.html">2º Ano</a></li>
-                <li><a href="../html/ano3.html">3º Ano</a></li>
-                <li><a href="../html/ano4.html">4º Ano</a></li>
-                <li><a href="../html/ano5.html">5º Ano</a></li>
-                <li><a href="../html/arquivo.html">Arquivo</a></li>
+                <li><a onclick="goToYear('1º Ano')">1º Ano</a></li>
+                <li><a onclick="goToYear('2º Ano')">2º Ano</a></li>
+                <li><a onclick="goToYear('3º Ano')">3º Ano</a></li>
+                <li><a onclick="goToYear('4º Ano')">4º Ano</a></li>
+                <li><a onclick="goToYear('5º Ano')">5º Ano</a></li>
+                <li><a href="../html/arquivo.html">Arquivo </a></li>
             </ul>
         </nav>
 
