--- a/html/ano2.html
+++ b/html/ano2.html
@@ -70,7 +70,10 @@
 
             <table id="ano">
                 <tr>
-                    <th colspan=" 3 "><a href=" ">2º Ano</a> <i class="fa-solid fa-angle-right fa-xs"></i><a href=" ">   3º Ano</a></th>
+                    <th colspan=" 3 ">
+                        <a href=" ">2º Ano</a>
+                        <i class="fa-solid fa-angle-right fa-xs"></i>
+                        <a href=" ">   3º Ano</a></th>
 
                 </tr>
                 <tr>
