--- a/index.html
+++ b/index.html
@@ -57,18 +57,24 @@
             <h2>Bem Vindo ao Repositório de Engenharia Biológica!</h2>
 
             <p class="centered-text">Para teres acesso aos documentos introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
+            <br><br>
+            <p>Se não souberes a palavra-passe manda-nos um email com o assunto <strong>PASSWORD</strong> a indicar o teu <strong>nome</strong> e: </p>
+            <p>
+                <ul>
+                    <li class="index_list"> <strong>Número de Aluno</strong>, caso sejas estudante do IST</li>
+                    <li class="index_list"> <strong>Motivo</strong> para queres aceder aos conteúdos do repositório, caso não estudes no IST</li>
 
-            <p>Se não fores aluno do IST e não souberes a palavra-passe manda-nos um email com o assunto "PASSWORD" a indicar o teu nome e motivo para queres aceder aos conteúdos do repositório.</p>
-
+                </ul>
+            </p>
+            <br><br>
             <p>O Repositório tem um carácter dinâmico e participativo. Caso tenhas material de estudo que não esteja no Repositório, envia-nos um email com o respectivo material anexado e devidamente identificado, ou preenche o seguinte formulário:</p>
-
+            <br><br>
 
             <div class="btn">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdsVS6ymHln25464lklVVKB05KIVurKX9ZQbnTIMQwLoWHRLg/viewform" class="btn page-btn">Formulário</a>
                 <a href="mailto: repositorio.neb@gmail.com" class="btn page-btn">Email</a>
             </div>
-            <p></p>
-
+            <br><br>
             <p class="centered-text">Se tiveres alguma sugestão, não hesites em falar connosco!</p>
             <p class="centered-text">Bom Estudo!</p>
 
