--- a/html/indexprivate.html
+++ b/html/indexprivate.html
@@ -99,7 +99,7 @@
             </div>
             <br><br>
             <p class="centered-text">Se tiveres alguma sugestão, não hesites em falar connosco!</p>
-            <p class="centered-text">Bom Estudo!</p>
+            <p class="centered-text"><strong>Bom Estudo!</strong></p>
 
         </section>
 
