--- a/html/ano.html
+++ b/html/ano.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate">
+    <meta http-equiv="Content-Language" content="pt">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
@@ -70,7 +72,7 @@
             <table id="ano">
                 <thead>
                     <tr>
-                        <th id="header_ano" colspan=" 3 ">
+                        <th id="header_ano" colspan="2">
                         </th>
                     </tr>
                 </thead>
