BETA VERSION optimised
Refreshing works, optimised js, a few css changes bigger font padding etc

--- a/html/arquivo.html
+++ b/html/arquivo.html
@@ -23,11 +23,11 @@
             <div class="bar2"></div>
             <div class="bar3"></div>
             <ul class="mobile-menu">
-                <li><a onclick="goToYear('1º Ano')">1º Ano</a></li>
-                <li><a onclick="goToYear('2º Ano')">2º Ano</a></li>
-                <li><a onclick="goToYear('3º Ano')">3º Ano</a></li>
-                <li><a onclick="goToYear('4º Ano')">4º Ano</a></li>
-                <li><a onclick="goToYear('5º Ano')">5º Ano</a></li>
+                <li><a onclick="setLocal('1º Ano')">1º Ano</a></li>
+                <li><a onclick="setLocal('2º Ano')">2º Ano</a></li>
+                <li><a onclick="setLocal('3º Ano')">3º Ano</a></li>
+                <li><a onclick="setLocal('4º Ano')">4º Ano</a></li>
+                <li><a onclick="setLocal('5º Ano')">5º Ano</a></li>
                 <li><a href="../html/arquivo.html">Arquivo </a></li>
 
             </ul>
@@ -53,11 +53,11 @@
 
         <nav>
             <ul>
-                <li><a onclick="goToYear('1º Ano')">1º Ano</a></li>
-                <li><a onclick="goToYear('2º Ano')">2º Ano</a></li>
-                <li><a onclick="goToYear('3º Ano')">3º Ano</a></li>
-                <li><a onclick="goToYear('4º Ano')">4º Ano</a></li>
-                <li><a onclick="goToYear('5º Ano')">5º Ano</a></li>
+                <li><a onclick="setLocal('1º Ano')">1º Ano</a></li>
+                <li><a onclick="setLocal('2º Ano')">2º Ano</a></li>
+                <li><a onclick="setLocal('3º Ano')">3º Ano</a></li>
+                <li><a onclick="setLocal('4º Ano')">4º Ano</a></li>
+                <li><a onclick="setLocal('5º Ano')">5º Ano</a></li>
                 <li><a href="">Arquivo </a></li>
             </ul>
         </nav>
