index minor changes
correções no texto da pág inicial

--- a/html/indexprivate.html
+++ b/html/indexprivate.html
@@ -77,7 +77,7 @@
         </section>
 
         <section class="page">
-            <h2>Bem Vindo ao Repositório de Engenharia Biológica!</h2>
+            <h2>Bem-vindo ao Repositório de Engenharia Biológica!</h2>
 
             <p class="centered-text">Para teres acesso aos documentos introduz a palavra-passe <i class="fa-solid fa-key"></i>.</p>
             <br><br>
@@ -85,12 +85,12 @@
             <p>
                 <ul>
                     <li class="index_list"> <strong>Número de Aluno</strong>, caso sejas estudante do IST</li>
-                    <li class="index_list"> <strong>Motivo</strong> para queres aceder aos conteúdos do repositório, caso não estudes no IST</li>
+                    <li class="index_list"> <strong>Motivo</strong> para quereres aceder aos conteúdos do repositório, caso não estudes no IST</li>
 
                 </ul>
             </p>
             <br><br>
-            <p>O Repositório tem um carácter dinâmico e participativo. Caso tenhas material de estudo que não esteja no Repositório, envia-nos um email com o respectivo material anexado e devidamente identificado, ou preenche o seguinte formulário:</p>
+            <p>O repositório tem um caráter dinâmico e participativo. Caso tenhas material de estudo que não esteja no repositório, envia-nos um email com o respetivo material anexado e devidamente identificado, ou preenche o seguinte formulário:</p>
             <br><br>
 
             <div class="btn">
@@ -100,6 +100,9 @@
             <br><br>
             <p class="centered-text">Se tiveres alguma sugestão, não hesites em falar connosco!</p>
             <p class="centered-text"><strong>Bom Estudo!</strong></p>
+            <p></p>
+            <p></p>
+            <p></p>
 
         </section>
 
