index minor changes
correções no texto da pág inicial

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <section class="foto">
-            <img src="../images/repositorioblur.jpg" alt="Biblioteca"></img>
+            <img src="images/repositorioblur.jpg" alt="Biblioteca"></img>
 
             <h1>Repositório de Engenharia Biológica</h1>
         </section>
